--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Getting Started</title>
   </head>
   <body>
+    <button
+      type="button"
+      class="btn btn-lg btn-danger example-popover"
+      data-toggle="popover"
+      title="Popover title"
+      data-content="And here's some amazing content. It's very engaging. Right?"
+    >
+      Click to toggle popover
+    </button>
     <script src="main.js"></script>
   </body>
 </html>
