--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,10 @@
       type="button"
       class="btn btn-lg btn-danger example-popover"
       data-toggle="popover"
-      title="Popover title"
-      data-content="And here's some amazing content. It's very engaging. Right?"
+      title="The Beatles"
+      data-content="Bravo, sai leggere"
     >
-      Click to toggle popover
-    </button>
+Clicca qui Minchiata x2   </button>
     <script src="main.js"></script>
   </body>
 </html>
