axios e chiamata esempio

--- a/static/index.html
+++ b/static/index.html
@@ -5,13 +5,14 @@
   </head>
   <body>
     <button
+    id="bottone"
       type="button"
       class="btn btn-lg btn-danger example-popover"
       data-toggle="popover"
       title="The Beatles"
       data-content="Bravo, sai leggere"
     >
-Clicca qui Minchiata x2   </button>
+Clicca qui  </button>
     <script src="main.js"></script>
   </body>
 </html>
