--- a/static/index.html
+++ b/static/index.html
@@ -4,18 +4,10 @@
     <title>My custom Bulma website</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body>
+  <body class="container">
     <h1 class="title">
-      Bulma
+      Bulma funzionante
     </h1>
-
-    <p class="subtitle">
-      Modern CSS framework based on
-      <a
-        href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox"
-        >Flexbox</a
-      >
-    </p>
 
     <div class="field">
       <div class="control">
@@ -27,16 +19,16 @@
       <p class="control">
         <span class="select">
           <select>
-            <option>Select dropdown</option>
+            <option>TEST SELECT</option>
           </select>
         </span>
       </p>
     </div>
 
     <div class="buttons">
-      <a class="button is-primary">Primary</a>
-      <a class="button is-link">Link</a>
+      <a id="bottone" class="button is-success is-large">FETCHTEST</a>
     </div>
+
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
