--- a/static/index.html
+++ b/static/index.html
@@ -65,32 +65,34 @@
     </div>
   </section>
 
-    <div class="field">
+    <div class="field has-addons">
       <div class="control">
-        <input class="input" type="text" placeholder="Input" />
+        <input class="input" type="text" placeholder="Inserisci Anno">
+      </div>
+      <div class="control">
+        <a id="bottone" class="button is-info">
+          Vai!
+        </a>
       </div>
     </div>
 
-    <div class="field">
-      <p class="control">
-        <span class="select">
-          <select>
-            <option>TEST SELECT</option>
-          </select>
-        </span>
-      </p>
-    </div>
+<div class="field">
+  <input id="switchRtlExample" type="checkbox" name="switchRtlExample" class="switch is-rtl" checked="checked">
+  <label for="switchRtlExample">Switch example</label>
+</div>
 
     <button class="toggle-modal">Canzone</button>
     <div class="modal" id="modal">
       <div class="modal-background"></div>
       <div class="modal-card">
         <header class="modal-card-head">
+          
           <p class="modal-card-title">Modal title</p>
           <button class="delete toggle-modal"></button>
+         
         </header>
         <section class="modal-card-body">
-          <p> Contenuto di prova </p>
+           <p> Contenuto di prova </p>
         </section>
         <footer class="modal-card-foot">
           <a class="button is-success toggle-modal">Save changes</a>
@@ -99,9 +101,6 @@
       </div>
     </div>
 
-    <div class="buttons">
-      <a id="bottone" class="button is-info is-medium is-oulined">FETCHTEST</a>
-    </div>
   <footer class="footer has-text-white is-size-7">
     <div class="content has-text-centered">
       <p>
