Search Bar centrata

--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
           Home
         </a>
 
-        <a class="navbar-item">
+        <a class="navbar-item" href="#cerca">
           Ricerca la tua musica!
         </a>
 
@@ -65,23 +65,34 @@
     </div>
   </section>
 
+  <div id="cerca" class="level-item">
     <div class="field has-addons">
       <div class="control">
         <input class="input" type="text" placeholder="Inserisci Anno">
       </div>
       <div class="control">
-        <a id="bottone" class="button is-info">
+        <a  id="bottone" class="button is-info">
           Vai!
         </a>
       </div>
     </div>
+  </div>
+  
+  <div class="level-item">
+    <div class="control has-text-white">
+      <label class="radio ">
+        <input type="radio" name="answer" checked>
+        Artista
+      </label>
+      <label class="radio">
+        <input type="radio" name="answer">
+        Album
+      </label>
+    </div>
+  </div>
 
-<div class="field">
-  <input id="switchRtlExample" type="checkbox" name="switchRtlExample" class="switch is-rtl" checked="checked">
-  <label for="switchRtlExample">Switch example</label>
-</div>
 
-    <button class="toggle-modal">Canzone</button>
+<!--   <button class="toggle-modal">Canzone</button>
     <div class="modal" id="modal">
       <div class="modal-background"></div>
       <div class="modal-card">
@@ -99,7 +110,7 @@
           <a class="button toggle-modal">Cancel</a>
         </footer>
       </div>
-    </div>
+    </div> -->
 
   <footer class="footer has-text-white is-size-7">
     <div class="content has-text-centered">
