Query funzionante di ricerca

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My custom Bulma website</title>
+    <title>WHATSTHEHIT</title>
     <link rel="stylesheet" href="css/main.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
@@ -68,7 +68,7 @@
   <div id="cerca" class="level-item">
     <div class="field has-addons">
       <div class="control">
-        <input class="input" type="text" placeholder="Inserisci Anno">
+        <input id="ricerca" class="input" type="text" placeholder="Inserisci Anno">
       </div>
       <div class="control">
         <a  id="bottone" class="button is-info">
