Aggiunta wallpaper parallax effect

--- a/static/index.html
+++ b/static/index.html
@@ -91,7 +91,6 @@
     </div>
   </div>
 
-
 <!--   <button class="toggle-modal">Canzone</button>
     <div class="modal" id="modal">
       <div class="modal-background"></div>
@@ -112,6 +111,64 @@
       </div>
     </div> -->
 
+    <img class="thumbnail is-fullhd" src="img/wallpaper.png" alt="image">
+
+    <div class="level">
+      <h2 class="level-item has-text-centered">
+        Ricerca per Artista!
+      </h2>
+      <h2 class="level-item has-text-centered">
+        Ricerca per Genere!
+      </h2>
+      <h2 class="level-item has-text-centered">
+        Ricerca per Nazione!
+      </h2>
+    </div>
+
+    <div class="level">
+      <div id="cerca" class="level-item">
+        <div class="field has-addons">
+          <div class="control">
+            <input id="ricerca" class="input" type="text" placeholder="Inserisci Artista">
+          </div>
+          <div class="control">
+            <a id="bottone" class="button is-info">
+              Vai!
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div id="cerca" class="level-item">
+        <div class="field has-addons">
+          <div class="control">
+            <input id="ricerca" class="input" type="text" placeholder="Inserisci Genere">
+          </div>
+          <div class="control">
+            <a id="bottone" class="button is-info">
+              Vai!
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div id="cerca" class="level-item">
+        <div class="field has-addons">
+          <div class="control">
+            <input id="ricerca" class="input" type="text" placeholder="Inserisci Nazione">
+          </div>
+          <div class="control">
+            <a id="bottone" class="button is-info">
+              Vai!
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    
+
   <footer class="footer has-text-white is-size-7">
     <div class="content has-text-centered">
       <p>
@@ -120,5 +177,6 @@
     </div>
   </footer>
     <script type="text/javascript" src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
   </body>
 </html>
