--- a/static/index.html
+++ b/static/index.html
@@ -111,7 +111,11 @@
       </div>
     </div> -->
 
+    <div class="is-divider is-dark"></div>
+
     <img class="thumbnail is-fullhd" src="img/wallpaper.png" alt="image">
+
+    <div class="is-divider is-dark"></div>
 
     <div class="level">
       <h2 class="level-item has-text-centered">
@@ -177,6 +181,5 @@
     </div>
   </footer>
     <script type="text/javascript" src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
   </body>
 </html>
