--- a/static/index.html
+++ b/static/index.html
@@ -11,9 +11,13 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav
+      class="navbar is-dark is-fixed-top"
+      role="navigation"
+      aria-label="main navigation"
+    >
       <div class="navbar-brand">
-        <a class="navbar-item">
+        <a class="navbar-item" href="#backimg">
           <img src="img/naming.svg" width="112" height="28" />
         </a>
 
@@ -30,14 +34,14 @@
         </a>
       </div>
 
-      <div id="navbarBasicExample" class="navbar-menu" href="#cerca">
+      <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item">
+          <a class="navbar-item" href="#ricerca">
             Home
           </a>
 
           <a class="navbar-item" href="#why">
-            Chi siamo
+            Utilizzo
           </a>
 
           <a class="navbar-item" href="#artist">
@@ -111,11 +115,11 @@
     </section>
 
     <div class="container">
-    <div
-      id="recordList"
-      class="tile is-ancestor"
-      style="flex-wrap: wrap;"
-    ></div>    
+      <div
+        id="recordList"
+        class="tile is-ancestor"
+        style="flex-wrap: wrap;"
+      ></div>
     </div>
     <div class="modal" id="modal">
       <div class="modal-background"></div>
@@ -179,10 +183,21 @@
                       Grazie alle varie interfacce sarai in grado di
                       visualizzare e conoscere le informazioni relative a tutti
                       gli artisti che hanno fatto la storia della musica.
-                    </p>
-                    <p class="subtitle">
                       Whatsthehit offre anche la possibilità di visualizzare le
                       classifiche dei migliori album con le relative storie.
+                    </p>
+                    <p class="title title has-text-centered is-4">
+                      Come si usa?
+                    </p>
+                    <p class="subtitle">
+                      Ricercare la tua canzone è semplicissimo, basta inserire
+                      l'anno che ti interessa, sempre compreso tra il 1900 e
+                      2016, nella barra testuale qui sopra. Sarai reindirizzato
+                      alla classifica dell'anno e potrai selezionare la tua
+                      canzone preferita, attraverso un'interfaccia jukebox, con
+                      un semplice click. Oltre la possibilità di avere
+                      informazioni sull'artista o sull'album, avrai l'occasione
+                      di ascoltare la tua canzone.
                     </p>
                   </article>
                 </div>
@@ -191,19 +206,22 @@
           </div>
         </div>
       </div>
-      </div>
 
       <div id="artist" class="container">
-        <h1 class="title has-text-info has-text-centered is-size-4">Ricerca per artista</h1>
+        <h1 class="title has-text-info has-text-centered is-size-4">
+          Ricerca per artista
+        </h1>
+        <br />
         <h2 class="subtitle has-text-white has-text-centered is-size-5">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          <strong class="has-text-white"
+            >"La musica può rendere gli uomini liberi"</strong
+          >
+          - <em class="is-size-6">Bob Marley</em>
         </h2>
+        <p class="subtitle has-text-white has-text-centered is-size-6">
+          Ricerca le migliori canzoni dei tuoi artisti preferiti e scopri le
+          meraviglie che esse ti riservano
+        </p>
         <div class="level">
           <div id="cerca" class="level-item">
             <div class="field has-addons">
@@ -225,19 +243,27 @@
         </div>
       </div>
       <br />
-      <img id="parallax" class="thumbnail" src="img/wallpaper.png" alt="image" />
+      <img
+        id="parallax"
+        class="thumbnail"
+        src="img/wallpaper.png"
+        alt="image"
+      />
       <br />
-    <div id="ita" class="container">
-      <h1 class="title has-text-info has-text-centered is-size-4">Ricerca italiana!</h1>
-      <h2 class="subtitle has-text-white has-text-centered is-size-5">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </h2>
+      <div id="ita" class="container">
+        <h1 class="title has-text-info has-text-centered is-size-4">
+          Ricerca le migliori classifiche in Italia!
+        </h1>
+        <h2 class="subtitle has-text-white has-text-centered is-size-5">
+          <strong class="has-text-white"
+            >"Le canzoni, non devono essere belle, devono essere stelle,
+            illuminare la notte e far ballare la gente"</strong
+          >
+          - <em class="is-size-6">Jovanotti</em>
+        </h2>
+        <p class="subtitle has-text-white has-text-centered is-size-6">
+          Ricerca e scopri le hit, che negli anni, hanno spopolato in Italia!
+        </p>
         <div class="level">
           <div id="cerca" class="level-item">
             <div class="field has-addons">
@@ -261,14 +287,13 @@
           </div>
         </div>
       </div>
-    <div class="container">
-      <div
-      id="recordListIta"
-      class="tile is-ancestor"
-      style="flex-wrap: wrap;"
-      ></div>    
-    </div>
-  
+      <div class="container">
+        <div
+          id="recordListIta"
+          class="tile is-ancestor"
+          style="flex-wrap: wrap;"
+        ></div>
+      </div>
       <footer class="footer has-text-white is-size-7">
         <div class="content has-text-centered">
           <p>
@@ -278,6 +303,7 @@
         </div>
       </footer>
     </section>
+
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
