Risoluzione Modal e puliza codice

--- a/static/index.html
+++ b/static/index.html
@@ -132,7 +132,7 @@
           <p id="modalContent">Contenuto di prova</p>
         </section>
         <footer class="modal-card-foot">
-          <a id="genere" class="button is-dark toggle-modal">Genere</a>
+          <a id="genere" class="button is-dark toggle-modal is-loading">Genere</a>
         </footer>
       </div>
     </div>
