--- a/static/index.html
+++ b/static/index.html
@@ -75,7 +75,7 @@
       <div class="hero-body">
         <div id="barra" class="container">
           <div id="cerca" class="level-item">
-            <div class="field has-addons">
+            <div id="searchInputDiv" class="wth_input field has-addons">
               <div class="control">
                 <input
                   id="ricerca"
