--- a/static/index.html
+++ b/static/index.html
@@ -130,6 +130,9 @@
         </header>
         <section class="modal-card-body">
           <p id="modalContent">Contenuto di prova</p>
+          <iframe id="searchYTchart">
+
+          </iframe>
         </section>
         <footer class="modal-card-foot">
           <a id="genere" class="button is-dark toggle-modal is-loading">Genere</a>
