--- a/static/index.html
+++ b/static/index.html
@@ -130,7 +130,7 @@
         </header>
         <section class="modal-card-body">
           <p id="modalContent">Contenuto di prova</p>
-          <iframe id="searchYTchart">
+          <iframe id="searchYTchart" frameborder="0" allowfullscreen>
 
           </iframe>
         </section>
