--- a/static/index.html
+++ b/static/index.html
@@ -135,7 +135,7 @@
           </iframe>
         </section>
         <footer class="modal-card-foot">
-          <a id="genere" class="button is-dark toggle-modal is-loading">Genere</a>
+          <a id="genere" class="button is-dark is-loading">Genere</a>
         </footer>
       </div>
     </div>
